--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.bady{
+    min-width: 320px;
+}
 header {
     background: black;
 }
@@ -57,6 +59,7 @@ header {
     height: 850px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 .banner__wrap {
